--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "node-fetch": "^1.0.1",
+    "object-hash": "^1.1.2",
     "redis": "^2.6.0-2",
     "whatwg-fetch": ">=0.10.0"
   },
