--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/matthew-andrews/isomorphic-fetch/issues",
   "dependencies": {
-    "bluebird": "^3.3.5",
+    "bluebird": "^3.4.1",
+    "cache-manager": "^2.1.2",
     "node-fetch": "^1.0.1",
     "object-hash": "^1.1.2",
-    "redis": "^2.6.0-2",
     "whatwg-fetch": ">=0.10.0"
   },
   "devDependencies": {
